@@ -1,5 +1,10 @@
 2007-11-23  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/flame/rect.c: reduced progress updates based on a patch
+	from Tobias Jakobs (bug #499255). Untabified.
+
+2007-11-23  Sven Neumann  <sven@gimp.org>
+
 	* tools/pdbgen/pdb/procedural_db.pdb: removed outdated information
 	from comment.
 
